package com.dani.mmk.backend.model;

public enum MatchStatus {
    CREATED, CONFIRMED, CANCELLED, COMPLETED
}