package com.dani.mmk.backend.model;

public enum MatchmakingRequestStatus {
    QUEUD, MATCHED, CANCELLED, EXPIRED
}
