package com.dani.mmk.backend.model;

public enum UserRole{
    ADMIN, PLAYER
}